--- a/css/bootstrap-5.1.3-dist/css/bootstrap.css
+++ b/css/bootstrap-5.1.3-dist/css/bootstrap.css
@@ -6052,7 +6052,7 @@ textarea.form-control-lg {
   justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
+  color: black;
   text-align: center;
   background: none;
   border: 0;
@@ -6068,10 +6068,10 @@ textarea.form-control-lg {
 .carousel-control-prev:hover, .carousel-control-prev:focus,
 .carousel-control-next:hover,
 .carousel-control-next:focus {
-  color: #fff;
+  color: black;
   text-decoration: none;
   outline: 0;
-  opacity: 0.9;
+  opacity: 4;
 }
 
 .carousel-control-prev {
@@ -6090,6 +6090,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
+  background-color: black;
 }
 
 /* rtl:options: {
@@ -6158,6 +6159,7 @@ textarea.form-control-lg {
   padding-bottom: 1.25rem;
   color: #fff;
   text-align: center;
+  background-color: rgba(1, 1, 1, 0.7);
 }
 
 .carousel-dark .carousel-control-prev-icon,
