--- a/Style.css
+++ b/Style.css
@@ -1,114 +1,26 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    height:100%;
-}
-/*mise en forme de la barre de navigation*/
-nav{
-    width: 100%;
-    margin: 0 auto;
-    background-color: deepskyblue;
-    position: sticky;
-    top: 0px;
-}
-
-nav ul{
-    list-style-type: none;
-}
-
-nav ul li{
-    float: left;
-    width: 20%;
-    text-align: center;
-    position: relative;
-}
-
-nav ul::after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-nav a{
-    display: block;
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
-    margin-left: 50px;
-}
-
-nav a:hover{
-    color: white;
-    border-bottom: 2px solid gold;
-}
-
-.sous{
-    display: none;
-    box-shadow: 0px 1px 2px #CCC;
-    background-color: deepskyblue;
-    position: absolute;
-    width: 100%;
-    z-index: 1000;
-    margin-left: 50px;
-}
-nav > ul li:hover .sous{
-    display: block;
-}
-.sous li{
-    float: none;
-    width: 100%;
-    text-align: left;
-}
-.sous a{
-    padding: 5px;
-    border-bottom: none;
-    margin-left: 50px;
-}
-.sous a:hover{
-    border-bottom: none;
-    background-color: RGBa(200,200,200,0.1);
-}
-.deroulant > a::after{
-    content:" ▼";
-    font-size: 10px;
-}
 /*mise en forme du titre*/
+
 H1{
     text-align: center;
-    color: orange;
-}
-#banniere
-{
-    height: auto;
-    width: 100%;
-}
-#logo
-{
-    width: 170px;
-    float: left;
-    margin-left: -155px;
-    margin-top: -30px;
-
+    color: white;
+    padding: 6% 0% 0% 0%;
+    text-decoration: solid;
 }
 
 #middleplane
 {
-    margin-left: 155px;
-    padding: 20px ;
+    margin-left: 6%;
+    padding: 4% ;
+
 }
 /*mise en forme du carrousel*/
 #presentationJeux
 {
     border: 2px deepskyblue solid;
-    padding:20px;
+    padding:4%;
     clear: both;
-    margin-left: 130px;
-    margin-top: 30px;
+    margin-left: 6%;
+    margin-top: 6%;
 }
 /*mise en forme du block d'explication*/
 #explication
@@ -240,76 +152,6 @@ H2
     font-weight: 300;
 }
 
-form div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    min-height: 83px;
-    margin-top: 25px;
-}
-
-form div > label {
-    margin-bottom: 7px;
-    font-weight: 600;
-}
-
-form div > input, form div > select, form div > textarea {
-    background: orange;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    font-family: Montserrat, "sans-serif";
-    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.25);
-}
-
-form div > input, form div > select {
-    height: 50px;
-    padding-left: 10px;
-}
-
-form div > select {
-    appearance: none;
-    background-size: 15px;
-    background-position: right 10px top 50%;
-    background-repeat: no-repeat;
-}
-
-form div > textarea {
-    height: 195px;
-    padding: 15px 0px 0px 10px;
-}
-
-form div > input::placeholder, form div > textarea::placeholder {
-    color: white;
-}
-
-form div > select:invalid {
-    color: white;
-}
-
-form div > select option {
-    background: white;
-    color: #303030;
-}
-
-form div:last-child {
-    align-items:center;
-    margin-top: 20px;
-}
-
-form button {
-    width: 450px;
-    max-width: 500px;
-    height: 60px;
-    font-weight: 700;
-    font-size: 28px;
-    background: white;
-    border: rgba(48, 48, 48, 0.5) solid 1px;
-    border-radius: 5px;
-    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
-    color: #303030;
-}
 
 #cutLine {
     color: orange;
