--- a/navbarre.css
+++ b/navbarre.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+
 }
 
 html{
@@ -16,6 +17,7 @@ header{
     background: #084298;
     color: white;
     padding: 0 2rem;
+
 }
 body{
     font-family: sans-serif;
@@ -23,9 +25,10 @@ body{
 nav{
     width: 100%;
     height:100%;
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 .menu{
     display:flex;
@@ -33,10 +36,12 @@ nav{
     align-items: center;
     list-style: none;
     width: 600px;
+
 }
 .menu li a{
     color:white;
     text-decoration: none;
+
 }
 .deroulant > a::after{
     content:" ▼";
@@ -86,6 +91,7 @@ nav > ul li:hover .sous{
     height: 100vh;
     background: url("img/fond2.jpg") no-repeat center;
     background-size: cover;
+    background-color: #084298;
 
 }
 .btn.btn-secondary{
