--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 H1{
     text-align: center;
     color: white;
-    padding: 6% 0% 0% 0%;
+    padding: 5% 0% 0% 0%;
     text-decoration: solid;
 }
 
@@ -16,76 +16,77 @@ H1{
 /*mise en forme du carrousel*/
 #presentationJeux
 {
-    border: 2px deepskyblue solid;
-    padding:4%;
-    clear: both;
+    border: 2px white solid;
+    padding:2%;
     margin-left: 6%;
-    margin-top: 6%;
+    margin-top: 4%;
 }
 /*mise en forme du block d'explication*/
 #explication
 {
-    border: 2px deepskyblue solid;
-    padding:20px 100px 60px 20px;
     clear: both;
-    margin-left: 130px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    width: 100%;
+    margin-top:4%;
+    margin-left :6%;
+    background-color: #17085a40;
 }
 H2
 {
     text-align: left;
-    color: darkorange;
+    color: white;
     font-family: "Noto Sans";
     text-decoration: underline;
 }
 #texte
 {
-    margin-left: 185px;
-    padding: 20px ;
-    margin-top: 30px;
+    margin-left: 10%;
+    padding: 2% ;
+    margin-top: 4%;
     text-align: justify;
+    opacity:1;
+    color:white;
 }
 #image
 {
-    width: 180px;
+    width: 18%;
     float: left;
-    padding: 20px;
+    padding: 2%;
+    opacity:1;
 }
 
 
 /* PARTIE STREET FIGHTER */
 #sfTitle{
-    color: orange;
+    color: white;
     text-align: center;
     font-family: "Noto Sans";
-    font-size: 50px;
-    padding: 20px;
+    font-size: 10%;
+    padding: 5%;
 }
     /* Container Video */
 #gameVideo{
     margin-left: 100px;
-    border: orange solid 3px;
+    border: white solid 3px;
     margin-top: 20px;
     margin-bottom: 50px;
     padding: 50px;
 }
 #sfVideo{
-    border: solid 5px orange;
+    border: solid 5px #084298;
     margin-left: 20px;
 }
 #sfVideoScnd{
     margin-left: 50px;
-    border: solid 5px orange;
+    border: solid 5px #084298;
 }
 #sfDemoTitle{
-    color:black;
+    color:white;
     margin-top: 50px;
     margin-left: 200px;
 }
     /* Container description du jeu */
 #sfTitleDesc{
-    color:black;
+    color:white;
     margin-top: 50px;
     margin-left: 50px;
 }
@@ -94,7 +95,7 @@ H2
     height: 30%;
 }
 #sfGameDesc{
-    background-color: orange;
+    background-color: #084298;
     color: white;
     padding:20px;
     text-align: center;
@@ -109,7 +110,7 @@ H2
 }
     /* Container details du jeu */
 #sfGameDetail{
-    border: orange solid 3px;
+    border: #084298 solid 3px;
     margin-top: 20px;
     margin-bottom: 50px;
     padding: 50px;
@@ -154,12 +155,12 @@ H2
 
 
 #cutLine {
-    color: orange;
+    color: white;
     border: solid 3px;
 }
 
 #sfTournoiDesc{
-    background-color: orange;
+    background-color: #084298;
     table-layout: fixed;
     color: white;
     padding:20px;
@@ -182,11 +183,18 @@ H2
 }
 
 #btnVote{
-    border: 2px solid orange;
-    background-color: orange;
+    border: 2px solid #084298;
+    background-color: #084298;
     color: white;
     font-size: 25px;
     margin-bottom: 50px;
     margin-left: 45%;
 }
-
+.btn.deco{
+    border: 2px solid #084298;
+    background-color: #084298;
+    color: white;
+    font-size: 25px;
+    margin-bottom: 50px;
+    margin-left: 45%;
+}
