--- a/projetweb-new/projetweb-new/navbarre.css
+++ b/projetweb-new/projetweb-new/navbarre.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    color: white;
 
 }
 
@@ -35,7 +36,8 @@ nav{
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    width: 600px;
+    width: 40%;
+    padding-right: 4%;
 
 }
 .menu li a{
@@ -86,16 +88,114 @@ nav > ul li:hover .sous{
     font-size: 1rem;
     padding: 0.5rem 1rem;
     border-radius:20px;
+    background: #221673;
+    color:white;
 }
 .heroe{
-    height: 100vh;
-    background: url("img/fond2.jpg") no-repeat center;
+    height: auto;
+    background: url("img/fond2.jpg") repeat-y ;
     background-size: cover;
-    background-color: #084298;
+
 
 }
 .btn.btn-secondary{
     background: transparent;
     border: 2px solid white;
     color: white;
+}
+.pied{
+    padding: 0% 0% 0% 0%;
+    background-color:#084298;
+    color:white;
+    margin: 0% 0% 0% 0%;
+    height: 15%;
+    width: 100%;
+}
+.footer-clean {
+    padding: 0% 0% 0% 0%;
+    background-color:#084298;
+    color:white;
+    margin: 0% 0% 0% 0%;
+    height: auto;
+    width: 100%;
+}
+
+.footer-clean h3 {
+    margin-top:0;
+    margin-bottom:0%;
+    font-weight:bold;
+    font-size:16px;
+}
+
+.footer-clean ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+}
+
+.footer-clean ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+}
+
+.footer-clean ul a:hover {
+    opacity:1;
+}
+
+.footer-clean .item.social {
+    text-align:right;
+}
+
+@media (max-width:767px) {
+    .footer-clean .item {
+        text-align:center;
+        padding-bottom:2%;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer-clean .item.social {
+        text-align:center;
+    }
+}
+
+.footer-clean .item.social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin-left:10px;
+    margin-top:22px;
+    color:inherit;
+    opacity:0.75;
+}
+
+.footer-clean .item.social > a:hover {
+    opacity:0.9;
+}
+
+@media (max-width:991px) {
+    .footer-clean .item.social > a {
+        margin-top:4%;
+    }
+}
+
+@media (max-width:767px) {
+    .footer-clean .item.social > a {
+        margin-top:1%;
+    }
+}
+
+.footer-clean .copyright {
+    margin-top:0%;
+    margin-bottom:0;
+    font-size:13px;
+    opacity:0.6;
 }
